tests/bad/example-e10b.rat
fn Main () -> Void {
  let a: Int = 10;
  if (a > 1) {
    return;
  } else {
    let b = 4;
  }
}
